[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
wasm-bindgen = "0.2.78"
bytes = "1.4.0"
prost = "0.11.8"
prost-types = "0.11.8"
prost-derive = "0.11.8"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
libsecp256k1 = "0.7.1"
sha2 = "0.10.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# [profile.release]
# lto = true
# opt-level = 'z'
