[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
hex = "0.4.3"
wasm-bindgen = "0.2.78"
bytes = "1.4.0"
prost = "0.11.8"
prost-types = "0.11.8"
prost-derive = "0.11.8"
libsecp256k1 = "0.7.1"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
sha2 = "0.9.9"
aes-gcm = "0.10.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# [profile.release]
# lto = true
# opt-level = 'z'
